--- a/frontend/src/components/ErrorMsg/ErrorMsg.module.scss
+++ b/frontend/src/components/ErrorMsg/ErrorMsg.module.scss
@@ -14,11 +14,19 @@
 }
 
 .danger {
+    
     color: #a02020;
     background-color: #ffe0e0;
 }
 
-// .alert-success {
-//     color: #20a020;
-//     background-color: #eeffe0;
-// }
+.danger2 {
+    margin-top:0 !important;
+    color: #a02020;
+    background-color: #ffe0e0;
+}
+
+.success {
+    margin-top:0 !important;
+    color: #20a020;
+    background-color: #eeffe0;
+}
