--- a/frontend/src/components/PushProductsPage/PushProducts.module.scss
+++ b/frontend/src/components/PushProductsPage/PushProducts.module.scss
@@ -33,21 +33,23 @@
     .content {
 
         max-width: 115rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        flex-wrap: wrap;
-        justify-content: center;
+        // display: flex;
+        // flex-direction: column;
+        // align-items: center;
+        // flex-wrap: wrap;
+        // justify-content: center;
         margin:6rem auto 0 auto;
         padding: 0 2rem;
     
     
         .productHeader {
+            text-align: center;
             font-size: 2.5rem;
         }
     
         .productList {
-           min-height: 60rem;
+            overflow-x: auto;
+           min-height: 36rem;
             //display: flex;
             margin-top: 6rem;
             // flex: 1 1 0;
@@ -62,13 +64,14 @@
             }
             
         .table {
-            
+            border-collapse: collapse;
+            border-spacing: 0;
             width: 100%;
             
          
             tr {
                 width: auto;
-                text-align: center;
+                text-align: left;
                 white-space: nowrap;
         
                 font-size: 1.1rem;
@@ -77,6 +80,13 @@
                     min-width: 6.5rem;
                     font-size: 1.3rem;
                     text-align: left;
+                }
+                th, td {
+                    border: 0.1rem solid #dbdbdb;
+                    padding: 0.5rem;
+                }
+                .btnwrap {
+                    width: 1rem;
                 }
             }
             tbody > tr:nth-child(odd) {
@@ -88,7 +98,7 @@
     
     }
     .buttonContainer {
-
+        min-height: 22rem;
         margin-top: 2rem;
     }
     
@@ -147,60 +157,60 @@
 }
 
 
-//! media queries
+// //! media queries
 
 
-//850px
-@media (max-width: 53.125rem) {
+// //850px
+// @media (max-width: 53.125rem) {
    
-    .pageWrapper {
-        .content {
-            .productList {
-                .table {
-                    display: block; // needed for overflow
-                    overflow-x: auto;  
-                    width: 55rem;
+//     .pageWrapper {
+//         .content {
+//             .productList {
+//                 .table {
+//                     display: block; // needed for overflow
+//                     overflow-x: auto;  
+//                     width: 55rem;
 
 
-                }
-            }
-        }
-    }
-}
+//                 }
+//             }
+//         }
+//     }
+// }
 
 
 
     
-//600px
-@media (max-width: 37.5rem) {
+// //600px
+// @media (max-width: 37.5rem) {
     
-    .pageWrapper {
-        .content {
-            .productList {
-                .table {
-                    display: block; // needed for overflow
-                    overflow-x: auto;  
-                    width: 42rem;
-                }
-            }
-        }
-    }
-}
+//     .pageWrapper {
+//         .content {
+//             .productList {
+//                 .table {
+//                     display: block; // needed for overflow
+//                     overflow-x: auto;  
+//                     width: 42rem;
+//                 }
+//             }
+//         }
+//     }
+// }
 
 
-//460px
+// //460px
 @media (max-width: 28.75rem) {
   
     .pageWrapper {
-    .content {
-        .productList {
-            .table {
-                display: block; // needed for overflow
-                overflow-x: auto;  
-                width: 26rem;
-            }
-        }
-    }
+    // .content {
+    //     .productList {
+    //         .table {
+    //             display: block; // needed for overflow
+    //             overflow-x: auto;  
+    //             width: 26rem;
+    //         }
+    //     }
+    // }
 
     .form {
         .formContainer {
