--- a/frontend/src/components/Profile/Profile.module.scss
+++ b/frontend/src/components/Profile/Profile.module.scss
@@ -38,6 +38,7 @@
     flex: 1 1 30rem;
 
     .form {
+        width: 100%;
         margin:4rem auto;
         display: flex;
         justify-content: center;
@@ -105,6 +106,7 @@
 }
 
 .profileOrders {
+    overflow-x: auto;
    margin-top: 7.5rem;
     flex: 1 1 60rem;
     display: flex;
@@ -117,9 +119,10 @@
     }
 
     .table {
-        
+        border-collapse: collapse;
+        border-spacing: 0;
         width: 100%;
-      
+        
         th {
             font-size: 1.3rem;
             text-align: left;
@@ -127,6 +130,11 @@
         tr {
             text-align: center;
             font-size: 1.1rem;
+            white-space: nowrap;
+        }
+        th, td {
+            border: 0.1rem solid #dbdbdb;
+            padding: 0.5rem;
         }
         tbody > tr:nth-child(odd) {
             background-color: var(--lightGrey);
@@ -141,75 +149,92 @@
 
 //! media queries
 
-//460px
-@media (max-width: 28.75rem) {
-    .profile {
+// //460px
+// @media (max-width: 28.75rem) {
+//     .profile {
 
-        padding: 0;
+//         padding: 0;
     
-    .profileInfo {
+//     .profileInfo {
 
     
-        .form {
+//         .form {
 
         
-            .formContainer {
+//             .formContainer {
 
-                width: 23rem;
+//                 width: 23rem;
                 
 
         
-                .title {
-                    font-size: 2rem;
-                }
+//                 .title {
+//                     font-size: 2rem;
+//                 }
         
-                li {
-                    display: flex;
-                    flex-direction: column;
-                    margin-bottom: 1rem;
-                    margin-top: 1rem;
-                }
+//                 li {
+//                     display: flex;
+//                     flex-direction: column;
+//                     margin-bottom: 1rem;
+//                     margin-top: 1rem;
+//                 }
         
-                input {
-                    padding: 1rem;
-                    border: .1rem var(--black) solid;
-                    border-radius: .5rem;
-                }
+//                 input {
+//                     padding: 1rem;
+//                     border: .1rem var(--black) solid;
+//                     border-radius: .5rem;
+//                 }
         
-                .text {
-                    margin: 3rem 0 0 0;
-                }
+//                 .text {
+//                     margin: 3rem 0 0 0;
+//                 }
             
 
-            }
+//             }
           
         
         
-        }
+//         }
     
     
-    }
+//     }
     
-    .profileOrders {
-        margin-top: 5rem;
+//     .profileOrders {
+//         margin-top: 5rem;
 
     
-        .table {
-            display: block; // needed for overflow
-            overflow-x: auto;  
-            width: 26rem;
+//         .table {
+//             display: block; // needed for overflow
+//             overflow-x: auto;  
+//             width: 26rem;
           
-            th {
-                font-size: 1.2rem;
-                text-align: left;
+//             th {
+//                 font-size: 1.2rem;
+//                 text-align: left;
+//             }
+//             tr {
+//                 font-size: 1rem;
+//             }
+//         }
+//     }
+    
+    
+    
+//     }
+// }
+
+
+ @media (max-width: 24.75rem) {
+     .profile {
+         .profileInfo {
+            .form {
+
+                .formContainer {
+                   
+                    width: 22rem;
+               
+                }
             }
-            tr {
-                font-size: 1rem;
-            }
-        }
-    }
-    
-    
-    
-    }
+         }
+     }
+
 }
