changed website theme

--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -23,7 +23,8 @@ body {
 
 
 :root {
-    --hoverColor: #ffc60032;
+    --hoverColor: rgba(0, 0, 0, 0.196);
+    --hoverColor2: #ac9d6732;
     --lightBlack: #242526;
     --black: #1c1b1b;
     --grey: #484a4d;
