--- a/frontend/src/components/Banner/Banner.module.scss
+++ b/frontend/src/components/Banner/Banner.module.scss
@@ -7,7 +7,7 @@
 
 
     max-width: 115rem;
-    height: 35rem;
+    height: 38rem;
 
      display: flex;
     overflow: hidden;
@@ -131,17 +131,19 @@ grid-row: 1 / -1;
     grid-template-rows: repeat(5, 1fr);
 
     .innerBlock {
+        padding: 1rem;
         background-color: rgba(255, 255, 255, 0.582);
-       
-        width: 100%;
-        height: 100%;
-        position: relative;
-        top: 20%;
-        left: 10%;
+        border-radius: .5rem;
+        
+       // max-height: 10rem;
+       position: absolute;
+        top: 5%;
+        left: 2%;
         display: flex;
         flex-direction: column;
    
         .bannerText {
+            
             text-align: center;
           
             font-size: 3rem;
