--- a/frontend/src/components/PushProductsPage/PushProducts.module.scss
+++ b/frontend/src/components/PushProductsPage/PushProducts.module.scss
@@ -160,57 +160,10 @@
 // //! media queries
 
 
-// //850px
-// @media (max-width: 53.125rem) {
-   
-//     .pageWrapper {
-//         .content {
-//             .productList {
-//                 .table {
-//                     display: block; // needed for overflow
-//                     overflow-x: auto;  
-//                     width: 55rem;
-
-
-//                 }
-//             }
-//         }
-//     }
-// }
-
-
-
-    
-// //600px
-// @media (max-width: 37.5rem) {
-    
-//     .pageWrapper {
-//         .content {
-//             .productList {
-//                 .table {
-//                     display: block; // needed for overflow
-//                     overflow-x: auto;  
-//                     width: 42rem;
-//                 }
-//             }
-//         }
-//     }
-// }
-
-
-// //460px
+//460px
 @media (max-width: 28.75rem) {
   
     .pageWrapper {
-    // .content {
-    //     .productList {
-    //         .table {
-    //             display: block; // needed for overflow
-    //             overflow-x: auto;  
-    //             width: 26rem;
-    //         }
-    //     }
-    // }
 
     .form {
         .formContainer {
