--- a/frontend/src/components/Banner/Banner.module.scss
+++ b/frontend/src/components/Banner/Banner.module.scss
@@ -157,7 +157,8 @@ grid-row: 1 / -1;
 
 }
 
-@media (max-width: 1200px) {
+//1200px
+@media (max-width: 75rem) {
     .slider {
         margin:2rem 2rem;
     }
