--- a/frontend/src/components/Cart/Cart.module.scss
+++ b/frontend/src/components/Cart/Cart.module.scss
@@ -173,7 +173,8 @@ a {
 
 }
 
-@media (max-width: 768px) {
+// 768px
+@media (max-width: 48rem) {
   .mainContainer {
     .heightContainer {
   .maxWidth {
