--- a/frontend/src/components/ProductList/ProductList.module.scss
+++ b/frontend/src/components/ProductList/ProductList.module.scss
@@ -198,8 +198,9 @@ button {
 }
 
 
-//? media queries, Adjust/convert values Later!
-@media (max-width: 1300px) {
+//! media queries
+//1300px
+@media (max-width: 81.25rem) {
     .grid {
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: minmax(150px, auto);
@@ -207,7 +208,8 @@ button {
     }
 }
 
-@media (max-width: 1200px) {
+//1200px
+@media (max-width: 75rem) {
     .flex {
         margin: 0 2rem;
     }    
@@ -215,8 +217,8 @@ button {
 
 
 
-
-@media (max-width: 990px) {
+//990px
+@media (max-width: 61.875rem) {
     .mainContainer {
 
         .grid {
@@ -226,7 +228,8 @@ button {
     }
 }
 
-@media (max-width: 768px) {
+//768px
+@media (max-width: 48rem) {
     .mainContainer {
     .grid {
         grid-template-columns: 1fr;
@@ -240,7 +243,8 @@ button {
 }
 }
 
-@media (max-width: 480px) {
+//480px
+@media (max-width: 30rem) {
     .mainContainer {
     .textPerPage {
         display: none;
