--- a/frontend/src/components/mainPageSales/MainSales.module.scss
+++ b/frontend/src/components/mainPageSales/MainSales.module.scss
@@ -268,13 +268,10 @@
      display: none;
  }
  
- 
- //? media queries: come back to fix these later
- @media (max-width: 1000px) {
 
- }
- 
- @media (max-width: 768px) {
+
+ //768 px
+ @media (max-width: 48rem) {
     .imgOverlay {
 
         height: 400px;
