--- a/frontend/src/components/mainPageSales/MainSales.module.scss
+++ b/frontend/src/components/mainPageSales/MainSales.module.scss
@@ -242,6 +242,7 @@
          align-content: center;
          
          .sale{
+             text-decoration: line-through;
              font-size: 1rem;
              padding-left: .5rem;
              padding-top: .7rem;
