--- a/frontend/src/components/Pagination/Pagination.module.scss
+++ b/frontend/src/components/Pagination/Pagination.module.scss
@@ -8,6 +8,7 @@
 }
 // each individual container
 .pageItem {
+    font-size: 2rem;
     cursor: pointer;
     margin: 5px;
     border: solid transparent 1px;
@@ -28,7 +29,7 @@
     background-color: transparent;
     outline:none;
      text-decoration: none;
-    font-size: 30px;
+    //font-size: 3rem;
 
 }
 
