--- a/frontend/src/components/ProductItem/ProductItem.module.scss
+++ b/frontend/src/components/ProductItem/ProductItem.module.scss
@@ -36,6 +36,7 @@
     grid-row: 1 / -1;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     object-fit: cover;
     background-position: center;
 }
