--- a/frontend/src/components/mainPageSales/MainSales.module.scss
+++ b/frontend/src/components/mainPageSales/MainSales.module.scss
@@ -28,6 +28,7 @@
      width: 100%;
      height: 100%;
      object-fit: cover;
+     overflow: hidden;
      background-position: center;
      border-radius: .5rem;
  }
